Closed
Bug 281803
Opened 21 years ago
Closed 21 years ago
History tree not updated in open windows after clearing history via prefs
Categories
(Camino Graveyard :: History, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino0.9
People
(Reporter: pgauriar, Assigned: sfraser_bugs)
Details
Attachments
(1 file)
|
7.40 KB,
patch
|
Details | Diff | Splinter Review |
Mac OS X 10.3.8/2005020908
If you have viewed history before in a browser window, that browser window's
history tree will not be updated after clicking the Clear Visited Pages button
in History prefs.
Steps to Reproduce:
0. Open browser window A, visit a few pages, leaving window A open.
1. View history in window A.
2. Clear history via button in prefs
3. View history in window A.
4. View history in a new window.
Actual results: window A's history is still the same as before, but the new
window's history is cleared as expected.
Expected results: window A's history should have been cleared as well.
Notes: This only occurs if the history has been viewed in a window before. If
not, there is no problem. Seems like overzealous caching to me.
Comment 1•21 years ago
|
||
sounds like something in the UI isn't getting the notification. simon?
Target Milestone: --- → Camino0.9
| Assignee | ||
Comment 2•21 years ago
|
||
Hrm, the UI should be notified when things change. Will look.
Status: NEW → ASSIGNED
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 4•21 years ago
|
||
Here's the fix: respond to the batching notifications from the history service,
and reload the world at the end of a batch.
| Assignee | ||
Comment 5•21 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•