Fix bug 281803: make sure we respond to batch notifications, and reload the entire history tree when the batch ends.